--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
-		"build": "browserify index.js -o dist/bundle.js",
-		"serve": "watchify index.js -o dist/bundle.js -v"
-	},
+    "build": "browserify index.js -o dist/bundle.js",
+    "serve": "watchify index.js -o dist/bundle.js -v"
+  },
   "dependencies": {
-		"canvas": "^2.9.1",
+    "brfs": "^2.0.2",
+    "canvas": "^2.9.1",
     "seek-bzip": "^2.0.0"
   },
   "devDependencies": {
