--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "browserify index.js -o dist/bundle.js",
-    "serve": "watchify index.js -o dist/bundle.js -v"
+    "build": "browserify -t brfs index.js -o dist/bundle.js",
+    "serve": "watchify -t brfs index.js -o dist/bundle.js -v"
   },
   "dependencies": {
     "brfs": "^2.0.2",
